remove removed commands

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,16 +3,13 @@ version: '${project.version}'
 main: org.untitleda.colorblocks.ColorBlocks
 api-version: 1.19
 author: Vauxten
-website: not.released
+website: colorblocks.vauxten.repl.co
 description: Main plugin for ColorBlocks.
 commands:
   colorblocks:
-    description: Just a command on the server.
+    description: Good try.
     usage: /<command>
     aliases: /cb
-  reload:
-    description: Not for you. (reloads the plugin).
-    usage: /<command>
   newgame:
     description: Creates a new game.
     usage: /<command>
